--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,58 @@
-astroid @ file:///opt/concourse/worker/volumes/live/7847b66d-b813-4ddd-4992-72d25ce34a7d/volume/astroid_1628063159978/work
-certifi==2021.5.30
-cycler==0.10.0
-isort @ file:///tmp/build/80754af9/isort_1628603791788/work
-joblib @ file:///tmp/build/80754af9/joblib_1613502643832/work
-kiwisolver @ file:///opt/concourse/worker/volumes/live/f396cc75-ab93-4292-5463-c41bf6c4bd1a/volume/kiwisolver_1612282405830/work
-lazy-object-proxy @ file:///opt/concourse/worker/volumes/live/34f7b6f0-7e5d-4b28-7c26-d6747b7d340c/volume/lazy-object-proxy_1616529069287/work
-matplotlib @ file:///opt/concourse/worker/volumes/live/41e8cd50-031f-4dda-5787-dd3c4f4e0f08/volume/matplotlib-suite_1613407855571/work
-mccabe==0.6.1
-mkl-fft==1.3.0
-mkl-random==1.1.1
-mkl-service==2.3.0
-numpy @ file:///opt/concourse/worker/volumes/live/e6a5a904-ea21-4841-4eec-d53e1ac1014c/volume/numpy_and_numpy_base_1603479626870/work
-olefile==0.46
-pandas==1.1.5
-Pillow @ file:///opt/concourse/worker/volumes/live/d0757663-0751-456b-5d22-3c7bd181f2a1/volume/pillow_1617386150680/work
-pylint @ file:///opt/concourse/worker/volumes/live/5aebc609-d494-4328-61fc-c8762ab8656c/volume/pylint_1627536799145/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz==2021.3
-scikit-learn @ file:///opt/concourse/worker/volumes/live/7b55aa24-f99a-451d-4bd5-ccdd895045b7/volume/scikit-learn_1621370398109/work
-scipy @ file:///opt/concourse/worker/volumes/live/d2cc8ac1-8922-48bc-7969-1f576a9f572d/volume/scipy_1597686637832/work
-six @ file:///tmp/build/80754af9/six_1623709665295/work
-threadpoolctl @ file:///Users/ktietz/demo/mc3/conda-bld/threadpoolctl_1629802263681/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tornado @ file:///opt/concourse/worker/volumes/live/cd39df49-5c81-4c95-513c-5bb83298b7ef/volume/tornado_1606942310103/work
-typed-ast @ file:///opt/concourse/worker/volumes/live/e71d1be0-9775-4fa4-4c69-bb5423fcc84f/volume/typed-ast_1624953679099/work
-typing-extensions @ file:///tmp/build/80754af9/typing_extensions_1631814937681/work
-wrapt==1.12.1
+absl-py==0.15.0
+astunparse==1.6.3
+cached-property==1.5.2
+cachetools==4.2.4
+certifi==2021.10.8
+charset-normalizer==2.0.7
+cycler==0.11.0
+flatbuffers==2.0
+gast==0.4.0
+google-auth==2.3.3
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.41.1
+h5py==3.5.0
+idna==3.3
+imageio==2.10.3
+importlib-metadata==4.8.1
+joblib==1.1.0
+keras==2.7.0
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.2
+libclang==12.0.0
+mahotas==1.4.12
+Markdown==3.3.4
+matplotlib==3.4.3
+networkx==2.6.3
+numpy==1.21.4
+oauthlib==3.1.1
+opencv-python==4.5.4.58
+opt-einsum==3.3.0
+Pillow==8.4.0
+protobuf==3.19.1
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pyparsing==3.0.5
+python-dateutil==2.8.2
+PyWavelets==1.1.1
+requests==2.26.0
+requests-oauthlib==1.3.0
+rsa==4.7.2
+scikit-image==0.18.3
+scikit-learn==1.0.1
+scipy==1.7.2
+six==1.16.0
+tensorboard==2.7.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.0
+tensorflow==2.7.0
+tensorflow-estimator==2.7.0
+tensorflow-io-gcs-filesystem==0.21.0
+termcolor==1.1.0
+threadpoolctl==3.0.0
+tifffile==2021.11.2
+typing-extensions==3.10.0.2
+urllib3==1.26.7
+Werkzeug==2.0.2
+wrapt==1.13.3
+zipp==3.6.0
